--- a/src/css/delivery.css
+++ b/src/css/delivery.css
@@ -6,8 +6,8 @@ button {
 
 /* Delivery */
 .delivery-container {
-
     max-width: 480px;
+        margin: 60px auto 0 auto;
     display: flex;
     flex-direction: column;
     color: #000;
