--- a/src/css/delivery.css
+++ b/src/css/delivery.css
@@ -7,7 +7,7 @@ button {
 /* Delivery */
 .delivery-container {
     max-width: 480px;
-        margin: 60px auto 0 auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     color: #000;
@@ -16,6 +16,7 @@ button {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    padding: 0 16px;
 }
 
 .delivery-section-title-container {
