--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,18 +4,18 @@ footer{
 }
 .footer-div{
     position: relative;
-    width: 100%;
+    max-width: 480px;
     height: 415px;
     background-color: #000;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     column-gap: 32px;
+    margin: 0 auto;
+    padding: 0 16px;
 }
 
 .footer-Navigation{
-    
-    margin-left:16px;
     display: flex;
     flex-direction: column;
     margin-top: 32px;
@@ -55,7 +55,6 @@ footer{
 }
 
 .footer-Contacts{
-    margin-left: 16px;
     width: 128px;
     height: 149px;
     flex-shrink: 0;
