--- a/src/css/store.css
+++ b/src/css/store.css
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: center;
   gap: 14px;
-  margin-bottom: 52px;
+  margin-bottom: 32px;
 }
 
 .line {
@@ -59,6 +59,7 @@
   align-items: center;
   gap: 8px;
   padding-bottom: 8px;
+  padding-top: 12px;
 }
 
 .store-line {
@@ -90,15 +91,24 @@
 @media (min-width: 768px) {
   .container {
     max-width: 768px;
-    padding: 0 16px;
+    padding: 0 24px;
+  }
+
+  .title-line-wrapper {
+    margin-bottom: 60px;
   }
   
   .section-title {
     font-size: 44px;
   }
 
+  .store-wrapper {
+    padding-top: 16px;
+  }
+
   .store-item-header {
     font-size: 32px;
+    white-space: nowrap;
   }
 
   .store-item-text {
@@ -118,15 +128,19 @@
   }
 
   .store-list {
-    column-gap: 32px;
-    gap: 40px;
     width: 720px;
+    gap: 40px;
+    column-gap: 32px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
   .container {
-    max-width: 1200px;
+    max-width: 1280px;
+  }
+
+  .title-line-wrapper {
+    margin-bottom: 80px;
   }
   
   .store-list-item img {
@@ -140,5 +154,9 @@
 
   .store-item-text {
     font-size: 26px;
+  }
+
+  .store-list {
+    width: 1232px;
   }
 }
