--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,6 +7,7 @@
     max-width: 480px;
     height: 35px;
     position: relative;
+    margin-bottom: 44px;
 }
 
 .header-call{
@@ -65,6 +66,7 @@
     .header-div{
         height: 57px;
         max-width: 768px;
+        margin-bottom: 55px;
     }
 
     .header-logo{
@@ -118,6 +120,7 @@
     .header-div{
         height: 57px;
         max-width: 1200px;
+        margin-bottom: 85px;
     }
 
     .header-logo{
